[project]
name = "hikvision"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "nanoid>=2.0.0",
    "psycopg2>=2.9.10",
    "pywin32>=310",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
]
