[project]
name = "cam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.0",
    "opencv-python>=4.11.0.86",
    "psycopg2>=2.9.10",
    "pyside6>=6.9.0",
    "requests>=2.32.3",
    "websockets>=15.0.1",
    "fastapi[standard]>=0.115.12",
    "nanoid>=2.0.0",
    "psycopg2>=2.9.10",
    "pywin32>=310",
    "requests>=2.32.3",
    "uvicorn>=0.34.2",
    "av>=14.4.0",
]
